// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewerApp Emitting nav events produces the appropriate event for APIUtil.postEvent 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "nav:next",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "payload": Object {
          "from": "page-1",
          "to": "a52d46a7-7aa1-47ef-b211-165062411",
        },
        "visitId": 123,
      },
    ],
    Array [
      Object {
        "action": "nav:prev",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "payload": Object {
          "from": "a52d46a7-7aa1-47ef-b211-165062411",
          "to": "page-1",
        },
        "visitId": 123,
      },
    ],
  ],
}
`;

exports[`ViewerApp Emitting question events produces the appropriate event for APIUtil.postEvent 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "question:setResponse",
        "draftId": "289325ed-4e8f-41e2-951e-1f3637fb615f",
        "eventVersion": "2.1.0",
        "payload": Object {
          "assessmentId": undefined,
          "attemptId": undefined,
          "context": undefined,
          "questionId": "ab63e735-9a4f-45e9-b775-5bb48c8d761b",
          "response": Object {
            "ids": Array [
              "dc5cdd0b-877c-450f-ae51-d45e6da991b5",
            ],
          },
          "targetId": "dc5cdd0b-877c-450f-ae51-d45e6da991b5",
        },
        "visitId": 123,
      },
    ],
    Array [
      Object {
        "action": "question:hide",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "payload": Object {
          "questionId": "ab63e735-9a4f-45e9-b775-5bb48c8d761b",
        },
        "visitId": 123,
      },
    ],
    Array [
      Object {
        "action": "question:view",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "payload": Object {
          "questionId": "ab63e735-9a4f-45e9-b775-5bb48c8d761b",
        },
        "visitId": 123,
      },
    ],
  ],
}
`;

exports[`ViewerApp clearPreviewScores shows error dialog 1`] = `
Array [
  "modal:show",
  Object {
    "value": Object {
      "component": <SimpleDialog
        cancelOk={false}
        noOrYes={false}
        ok={true}
        onCancel={[Function]}
        onConfirm={[Function]}
        title={null}
        width="15em"
        yesOrNo={false}
      >
        There was an error resetting assessments and questions
      </SimpleDialog>,
      "hideViewer": false,
    },
  },
]
`;

exports[`ViewerApp idle posts event 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "viewer:inactive",
        "draftId": "mockDraftId",
        "eventVersion": "2.0.0",
        "payload": Object {
          "inactiveDuration": 600000,
          "lastActiveTime": 2016-09-22T16:57:14.500Z,
        },
        "preview": 123,
      },
    ],
  ],
}
`;

exports[`ViewerApp onVisibilityChange post event when hidden 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "viewer:leave",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "visitId": 123,
      },
    ],
  ],
}
`;

exports[`ViewerApp onVisibilityChange post event when returning 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "viewer:return",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "payload": Object {
          "relatedEventId": "mockId",
        },
        "visitId": 123,
      },
    ],
  ],
}
`;

exports[`ViewerApp onWindowClose fires postEvent 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "viewer:close",
        "draftId": "mockDraftId",
        "eventVersion": "1.0.0",
        "visitId": 123,
      },
    ],
  ],
}
`;

exports[`ViewerApp returnFromIdle fires event 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "action": "viewer:returnFromInactive",
        "draftId": "mockDraftId",
        "eventVersion": "2.0.0",
        "payload": Object {
          "inactiveDuration": 192,
          "lastActiveTime": "1530552702030",
          "relatedEventId": "mockId",
        },
        "visitId": 123,
      },
    ],
  ],
}
`;
